--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="test" value="true"/>
@@ -29,9 +23,9 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="F:/jars/activation.jar"/>
-	<classpathentry kind="lib" path="F:/jars/javamail-imap-1.4.2.jar"/>
-	<classpathentry kind="lib" path="F:/jars/javax.mail-1.6.2.jar"/>
-	<classpathentry kind="lib" path="F:/jars/mail.jar"/>
+	<classpathentry kind="lib" path="C:/jars/activation.jar"/>
+	<classpathentry kind="lib" path="C:/jars/javamail-imap-1.4.2.jar"/>
+	<classpathentry kind="lib" path="C:/jars/javax.mail-1.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/jars/mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
